fix: word wrap for multiline posts

--- a/static/styles/post.css
+++ b/static/styles/post.css
@@ -19,3 +19,7 @@
 .line-break {
   white-space: pre-line;
 }
+
+.word-wrap {
+  word-break: break-word;
+}
